[tool.poetry]
name = "prometheus-communicator"
version = "0.1.0"
description = "Web service that transmit the alerts from Prometheus to other places"
authors = ["Tzu-Ting <tzingshih@gmail.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Topic :: System :: Monitoring",
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
prometheus-fastapi-instrumentator = "^7.0.0"
pyyaml = "^6.0.1"
jinja2 = "^3.1.4"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
